# py-lint-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
